Add first entity(User) and Identity

--- a/HealthifyApp/HealthifyApp.Web/appsettings.json
+++ b/HealthifyApp/HealthifyApp.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-HealthifyApp.Web-50b950e7-4da6-4258-9819-1a0114cc304e;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SQLServer": "Server=.;Database=HealthifyApp;Integrated Security=True; TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
