Scaffold identity and fix program.cs

--- a/HealthifyApp/HealthifyApp.Web/appsettings.json
+++ b/HealthifyApp/HealthifyApp.Web/appsettings.json
@@ -1,12 +1,12 @@
 {
   "ConnectionStrings": {
-    "SQLServer": "Server=.;Database=HealthifyApp;Integrated Security=True; TrustServerCertificate=True"
+    "SQLServer": "Server=.;Database=HealthifyApp;Integrated Security=True;TrustServerCertificate=True",
+    "HealthifyDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=HealthifyApp.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
