--- a/HealthifyApp/HealthifyApp.Web.Infrastructure/HealthifyApp.Web.Infrastructure.csproj
+++ b/HealthifyApp/HealthifyApp.Web.Infrastructure/HealthifyApp.Web.Infrastructure.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HealthifyApp.Data\HealthifyApp.Data.csproj" />
+  </ItemGroup>
+
 </Project>
