Add Delete logic for TargetNutrition

--- a/HealthifyApp/HealthifyApp.Web/HealthifyApp.Web.csproj
+++ b/HealthifyApp/HealthifyApp.Web/HealthifyApp.Web.csproj
@@ -29,4 +29,11 @@
     <ProjectReference Include="..\HealthifyApp.Web.ViewModels\HealthifyApp.Web.ViewModels.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Views\TargetNutrition\Delete.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
