--- a/HealthifyApp/HealthifyApp.Data/HealthifyApp.Data.csproj
+++ b/HealthifyApp/HealthifyApp.Data/HealthifyApp.Data.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\HealthifyApp.Common\HealthifyApp.Common.csproj" />
     <ProjectReference Include="..\HealthifyApp.Data.Models\HealthifyApp.Data.Models.csproj" />
   </ItemGroup>
 
