--- a/HealthifyApp/HealthifyApp.Web/appsettings.json
+++ b/HealthifyApp/HealthifyApp.Web/appsettings.json
@@ -3,10 +3,11 @@
     "SQLServer": "Server=.;Database=HealthifyApp;Integrated Security=True;TrustServerCertificate=True",
     "HealthifyDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=HealthifyApp.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
-  "AdminSettings": {
-    "Username": "admin@example.com",
-    "Password": "admin123"
+  "Admin": {
+    "Email": "admin@example.com",
+    "Password": "Admin@123"
   },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
